[DText] Prevent inline code blocks from overlapping (#1006)

--- a/app/javascript/src/styles/base/_base.scss
+++ b/app/javascript/src/styles/base/_base.scss
@@ -83,6 +83,7 @@ menu, .menu {
 
 p {
   margin-bottom: 1em;
+  &:last-child { margin-bottom: 0; }
 }
 
 table tfoot {
